--- a/recordit/templates/user/settings/change_password.html
+++ b/recordit/templates/user/settings/change_password.html
@@ -3,25 +3,20 @@
 {% from 'macros/macros.html' import render_breadcrumb_item %}
 
 
-{% block breadcrumb %}
-    <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
-         data-black-overlay="4">
-        <div class="container">
-            <div class="in-breadcrumb">
-                <div class="row">
-                    <div class="col">
-                        <h3>Settings</h3>
-                        <ul class="breadcrumb-list">
-                            {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
-                            {{ render_breadcrumb_item(endpoint='user.settings', name='Settings') }}
-                            {{ render_breadcrumb_item(endpoint='user.change_password', name='Change Password') }}
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endblock breadcrumb %}
+{% block title %}Change Password{% endblock %}
+
+
+{% block breadcrumb_title %}
+    <h3>{{ _('Change Password') }}</h3>
+{% endblock breadcrumb_title %}
+
+
+{% block breadcrumb_item_list %}
+    <li class="breadcrumb-item active">
+        Change Password
+    </li>
+{% endblock breadcrumb_item_list %}
+
 
 
 {% block setting_content %}
