--- a/recordit/templates/auth/login.html
+++ b/recordit/templates/auth/login.html
@@ -13,7 +13,7 @@
             <div class="in-breadcrumb">
                 <div class="row">
                     <div class="col">
-                        <h3>Login</h3>
+                        <h3>{{ _('Login') }}</h3>
                         <ul class="breadcrumb-list">
                             {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
                             <li class="breadcrumb-item active">
