--- a/recordit/templates/errors.html
+++ b/recordit/templates/errors.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% from 'macros/macros.html' import render_breadcrumb_item %}
 
-{% block title %}Error {{ code }}{% endblock %}
+{% block title %}{{ _('Error') }} {{ code }}{% endblock %}
 
 {% block breadcrumb %}
     <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
