--- a/recordit/templates/user/settings/edit_profile.html
+++ b/recordit/templates/user/settings/edit_profile.html
@@ -3,27 +3,19 @@
 {% from 'macros/macros.html' import render_breadcrumb_item %}
 
 
-{% block breadcrumb %}
-    <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
-         data-black-overlay="4">
-        <div class="container">
-            <div class="in-breadcrumb">
-                <div class="row">
-                    <div class="col">
-                        <h3>Settings</h3>
-                        <ul class="breadcrumb-list">
-                            {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
-                            {{ render_breadcrumb_item(endpoint='user.settings', name='Settings') }}
-                            <li class="breadcrumb-item active">
-                                Edit Profile
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endblock breadcrumb %}
+{% block title %}Edit Profile{% endblock %}
+
+
+{% block breadcrumb_title %}
+<h3>{{ _('Edit Profile') }}</h3>
+{% endblock breadcrumb_title %}
+
+
+{% block breadcrumb_item_list %}
+<li class="breadcrumb-item active">
+    Edit Profile
+</li>
+{% endblock breadcrumb_item_list %}
 
 
 {% block setting_content %}
