--- a/recordit/templates/admin/add_course.html
+++ b/recordit/templates/admin/add_course.html
@@ -12,7 +12,7 @@
 
 
 {% block breadcrumb_item_list %}
-    {{ render_breadcrumb_item(endpoint='admin.index', name='Dashboard') }}
+    {{ super() }}
     {{ render_breadcrumb_item(endpoint='admin.manage_course', name='Manage Course') }}
     <li class="breadcrumb-item active">Add Course</li>
 {% endblock breadcrumb_item_list %}
