--- a/recordit/templates/admin/manage_user.html
+++ b/recordit/templates/admin/manage_user.html
@@ -13,8 +13,8 @@
 
 
 {% block breadcrumb_item_list %}
-    {{ render_breadcrumb_item(endpoint='admin.index', name='Dashboard') }}
-    <li class="breadcrumb-item active">Manage User</li>
+    {{ super() }}
+    {{ render_breadcrumb_item(endpoint='admin.manage_user', name='Manage User') }}
 {% endblock breadcrumb_item_list %}
 
 
