--- a/recordit/templates/errors.html
+++ b/recordit/templates/errors.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% from 'macros/macros.html' import render_breadcrumb_item %}
 
+
 {% block title %}{{ _('Error') }} {{ code }}{% endblock %}
+
 
 {% block breadcrumb %}
     <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
@@ -10,7 +12,7 @@
             <div class="in-breadcrumb">
                 <div class="row">
                     <div class="col">
-                        <h3>Error {{ code }}</h3>
+                        <h3>{{ _('Error') }} {{ code }}</h3>
                         <ul class="breadcrumb-list">
                             {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
                             <li class="breadcrumb-item active">Error {{ code }}</li>
