--- a/recordit/templates/front/about.html
+++ b/recordit/templates/front/about.html
@@ -6,24 +6,14 @@
 {% block title %}About{% endblock %}
 
 
-{% block breadcrumb %}
-    <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
-         data-black-overlay="4">
-        <div class="container">
-            <div class="in-breadcrumb">
-                <div class="row">
-                    <div class="col">
-                        <h3>{{ _("About Us") }}</h3>
-                        <ul class="breadcrumb-list">
-                            {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
-                            <li class="breadcrumb-item active">About Us</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endblock breadcrumb %}
+{% block breadcrumb_title %}
+    <h3>{{ _("About Us") }}</h3>
+{% endblock breadcrumb_title %}
+
+{% block breadcrumb_item_list %}
+    {{ super() }}
+    {{ render_breadcrumb_item(endpoint='front.about', name='About Us') }}
+{% endblock breadcrumb_item_list %}
 
 
 {% block content %}
