--- a/recordit/templates/user/settings/base.html
+++ b/recordit/templates/user/settings/base.html
@@ -1,32 +1,13 @@
-{% extends 'base.html' %}
+{% extends 'user/base.html' %}
 {% from 'macros/macros.html' import render_nav_item %}
 
 
 {% block title %}Settings{% endblock %}
 
-
-{% block breadcrumb %}
-    <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
-        data-black-overlay="4">
-        <div class="container">
-            <div class="in-breadcrumb">
-                <div class="row">
-                    <div class="col">
-                        {% block breadcrumb_title %}
-                        {% endblock breadcrumb_title %}
-                        <ul class="breadcrumb-list">
-                            {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
-                            {{ render_breadcrumb_item(endpoint='user.settings', name='Settings') }}
-                            {% block breadcrumb_item_list %}
-                            {% endblock breadcrumb_item_list %}
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endblock breadcrumb %}
-
+{% block breadcrumb_item_list %}
+{{ super() }}
+{{ render_breadcrumb_item(endpoint='user.settings', name='Settings') }}
+{% endblock breadcrumb_item_list %}
 
 
 {% block content %}
