--- a/recordit/templates/admin/manage_record.html
+++ b/recordit/templates/admin/manage_record.html
@@ -60,7 +60,7 @@
         {{ render_pagination(pagination, align='center') }}
     {% else %}
         <div class="tip">
-            <h5><i class="fas fa-ban"></i> No Record Tabels.</h5>
+            <h5><i class="fas fa-ban"></i> {{ _('No Record Tabels.') }}</h5>
         </div>
     {% endif %}
 {% endblock dashboard_content %}
