--- a/recordit/templates/admin/manage_user.html
+++ b/recordit/templates/admin/manage_user.html
@@ -103,7 +103,7 @@
                                                 {{ render_pagination(pagination, align='center') }}
                                             {% else %}
                                                 <div class="tip">
-                                                    <h5><i class="fas fa-ban"></i> No users.</h5>
+                                                    <h5><i class="fas fa-ban"></i> {{ _('No users.') }}</h5>
                                                 </div>
                                             {% endif %}
                                         </div>
