--- a/recordit/templates/base.html
+++ b/recordit/templates/base.html
@@ -110,7 +110,7 @@
 
 <main class="main-wrapper">
     {% block breadcrumb %}
-        <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
+        <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/breadcrumb.jpg') }}"
              data-black-overlay="4">
             <div class="container">
                 <div class="in-breadcrumb">
@@ -130,7 +130,6 @@
             </div>
         </div>
     {% endblock breadcrumb %}
-
 
     <div aria-live="polite" class="d-flex justify-content-center align-items-center">
         <div class="toast-style">
