--- a/recordit/templates/errors.html
+++ b/recordit/templates/errors.html
@@ -2,27 +2,20 @@
 {% from 'macros/macros.html' import render_breadcrumb_item %}
 
 
-{% block title %}{{ _('Error') }} {{ code }}{% endblock %}
+{% block title %}{{ code }} {{ _('Error') }}{% endblock %}
 
 
-{% block breadcrumb %}
-    <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
-         data-black-overlay="4">
-        <div class="container">
-            <div class="in-breadcrumb">
-                <div class="row">
-                    <div class="col">
-                        <h3>{{ _('Error') }} {{ code }}</h3>
-                        <ul class="breadcrumb-list">
-                            {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
-                            <li class="breadcrumb-item active">Error {{ code }}</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endblock breadcrumb %}
+
+{% block breadcrumb_title %}
+    <h3>{{ code }} {{ _('Error') }}</h3>
+{% endblock breadcrumb_title %}
+
+
+{% block breadcrumb_item_list %}
+    {{ super() }}
+    <li class="breadcrumb-item active">Error {{ code }}</li>
+{% endblock breadcrumb_item_list %}
+
 
 {% block content %}
     <main class="page-content section-ptb">
